[ADD] RSA-AES 패킷 암호화 기능 구현

--- a/OmokServer/OmokServer/OmokServer.csproj
+++ b/OmokServer/OmokServer/OmokServer.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="FlatBuffer\**" />
+    <EmbeddedResource Remove="FlatBuffer\**" />
+    <None Remove="FlatBuffer\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ServerCore\ServerCore.csproj" />
   </ItemGroup>
 
@@ -18,7 +24,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Managers\" />
     <Folder Include="FlatBuffers\" />
   </ItemGroup>
 
